@@ -16,4 +16,42 @@ jQuery ->
       $("#sticky_board_id_container").show()
       false
     )
-
+    .on('click', '[data-object~="board-select"]', () ->
+      if parseInt($('#board_id').val()) == parseInt($(this).data('board-id'))
+        $(this).parent().removeClass('active')
+        $('#board_id').val('0')
+        $('[data-object~="board-select"][data-board-id="0"]').parent().addClass('active')
+      else
+        $('[data-object~="board-select"]').parent().removeClass('active')
+        $(this).parent().addClass('active')
+        $('#board_id').val($(this).data('board-id'))
+      $("#stickies_search").submit()
+      false
+    )
+    .on('click', '[data-object~="tag-select"]', () ->
+      if parseInt($('#tag_ids').val()) == parseInt($(this).data('tag-id'))
+        $(this).parent().removeClass('active')
+        $('#tag_ids').val('')
+      else
+        $('[data-object~="tag-select"]').parent().removeClass('active')
+        $(this).parent().addClass('active')
+        $('#tag_ids').val($(this).data('tag-id'))
+      $("#stickies_search").submit()
+      false
+    )
+    .on('click', '[data-object~="toggle-archived-boards"]', () ->
+      if $("#archived_boards_container").is(":visible")
+        $("#archived_boards_container").hide()
+        $('[data-object~="board-select"]').parent().removeClass('active')
+        $('#board_id').val('0')
+        $('[data-object~="board-select"][data-board-id="0"]').parent().addClass('active')
+        $(this).html("Show " + $(this).data('message'))
+      else
+        $('[data-object~="board-select"]').parent().removeClass('active')
+        $('[data-object~="board-select"][data-board-id="'+ $(this).data('board-id') + '"]').parent().addClass('active')
+        $('#board_id').val($(this).data('board-id'))
+        $(this).html("Hide " + $(this).data('message'))
+        $("#archived_boards_container").show()
+      $("#stickies_search").submit()
+      false
+    )
