@@ -1,0 +1,65 @@
+<% @title = "Project: #{@project.name}" %>
+
+<% status_all = (params[:status].include?('planned') and params[:status].include?('completed')) %>
+
+<%= form_tag stickies_path, method: :get, remote: true, id: "stickies_search", data: { object: 'form-load' } do %>
+  <%= hidden_field_tag :search, params[:search] %>
+  <%= hidden_field_tag :project_id, @project.id %>
+  <%= hidden_field_tag :board_id, params[:board_id] %>
+  <%= hidden_field_tag :tag_ids, params[:tag_ids] %>
+  <%= hidden_field_tag :order, 'stickies.created_at DESC' %>
+
+  <%= hidden_field_tag :use_template, 'redesign' %>
+
+  <%= hidden_field_tag 'status[]', 'planned', id: 'status_planned' %>
+  <%= hidden_field_tag 'status[]', (status_all ?  'completed' : ''), id: 'status_completed' %>
+  <%= hidden_field_tag 'assigned_to_me', params[:assigned_to_me] %>
+<% end %>
+
+<div class="row">
+  <div class="span2">
+    <div style="font-size: 20px;font-weight:200;"><%= link_to @project.name, @project %></div>
+    <ul class="nav nav-list">
+      <li class="nav-header">Boards</li>
+      <li class="<%= 'active' if params[:board_id] == '0' %>"><%= link_to 'Holding Pen', '#', data: { object: 'board-select', board_id: 0 } %></li>
+      <% @project.boards.where(archived: false).natural_sort.each do |board_name, board_id| %>
+        <li class="<%= 'active' if params[:board_id].to_i == board_id %>">
+          <%= link_to board_name, '#', data: { object: 'board-select', board_id: board_id } %>
+        </li>
+      <% end %>
+      <li class="<%= 'active' if params[:board_id].blank? %>"><%= link_to 'All Stickies', '#', data: { object: 'board-select', board_id: '' } %></li>
+    </ul>
+
+    <%= link_to 'Create Board', new_board_path(board: { project_id: @project.id }), class: 'btn btn-mini btn-block' %>
+    <% if @project.boards.where(archived: true).size > 0 %>
+      <%= link_to ((not @board or (@board and not @board.archived?)) ? 'Show' : 'Hide') + ' ' + pluralize(@project.boards.where(archived: true).size, 'Archived Board'), '', class: 'btn btn-mini boards-link btn-block', data: { object: 'toggle-archived-boards', message: pluralize(@project.boards.where(archived: true).size, 'Archived Board'), board_id: @project.boards.where(archived: true).first.id } %>
+    <% end %>
+
+    <ul class="nav nav-list" id="archived_boards_container" style="<%= "display:none" if not @board or (@board and not @board.archived?) %>">
+      <li class="nav-header">Archived</li>
+      <% @project.boards.where(archived: true).natural_sort.each do |board_name, board_id| %>
+        <li class="<%= 'active' if params[:board_id].to_i == board_id %>">
+          <%= link_to board_name, '#', data: { object: 'board-select', board_id: board_id } %>
+        </li>
+      <% end %>
+    </ul>
+
+    <ul class="nav nav-list">
+      <li class="nav-header">Tags</li>
+      <% @project.tags.natural_sort.each do |tag_name, tag_id| %>
+        <li class="<%= 'active' if params[:tag_id].to_i == tag_id %>">
+          <%= link_to tag_name, '#', data: { object: 'tag-select', tag_id: tag_id } %>
+        </li>
+      <% end %>
+    </ul>
+
+    <%= link_to 'Create Tag', new_tag_path(tag: { project_id: @project.id }), class: 'btn btn-mini btn-block' %>
+  </div>
+
+  <div class="span10">
+
+    <div id="stickies" style="margin-top:-20px">
+
+    </div>
+  </div>
+</div>
