@@ -1,0 +1,51 @@
+<% status_all = (params[:status].include?('planned') and params[:status].include?('completed')) %>
+<% @project = current_user.all_viewable_projects.find_by_id(params[:project_id]) %>
+<% @board = @project.boards.find_by_id(params[:board_id]) if @project %>
+<% @tags = @project.tags.where(id: params[:tag_ids]) if @project %>
+
+<div style="clear:both"></div>
+
+<div class="pull-left" style="margin-top: 10px; margin-bottom: 10px; margin-left: 20px; padding: 2px 5px;">
+  <div style="font-weight:200;font-size:20px;float:left;margin-right:5px"><%= @board ? @board.name : (params[:board_id] == '0' ? 'Holding Pen' : 'All Stickies') %></div> <% @tags.each do |tag| %><%= @tag = tag; render partial: 'tags/show' %><% end %>
+</div>
+<div class="btn-toolbar pull-right">
+  <div class="btn-group">
+    <button id="assigned-to-me-btn" class="btn <%= 'active' if params[:assigned_to_me] == '1' %> btn-mini">Assigned To Me</button>
+  </div>
+
+  <div class="btn-group" data-toggle="buttons-radio">
+    <button id="all-stickies" class="btn <%= 'active' if status_all %> btn-mini">All</button>
+    <button id="not-completed-stickies" class="btn <%= 'active' unless status_all %> btn-mini">Not Completed</button>
+  </div>
+</div>
+
+<% if @stickies.count > 0 %>
+<div class="pull-right" style="margin-top: 10px; margin-bottom: 10px; margin-left:20px; font-size:11px; padding: 2px 6px">
+  <%= @stickies.count %> of <%= @count %>
+</div>
+
+<div style="clear:both"></div>
+
+<table class="table table-condensed" style="width:100%;table-layout: fixed;"><col width="20px"/><col /><col width="80px"/><col width="170px"/>
+  <% @stickies.each do |sticky| %>
+    <tr>
+      <td><%= check_box_tag 'sticky_ids[]', sticky.id, false, style: 'margin:0px' %></td>
+      <td data-link="<%= sticky_path(sticky) %>" style="cursor:pointer;white-space:nowrap;overflow-x:hidden;">
+        <% sticky.tags.each do |tag| %><%= @tag = tag; render partial: 'tags/show' %><% end %> <%= strip_tags(sticky.full_description) %>
+      </td>
+      <td style="white-space:nowrap;overflow-x:hidden;">
+        <% if sticky.owner %>
+          <%= image_tag sticky.owner.avatar_url(18, "blank") %>
+          <%= sticky.owner.nickname %>
+        <% end %>
+      </td>
+      <td style="text-align:right;white-space:nowrap"><%= simple_date(sticky.due_date) %><%= " at #{sticky.due_at_string_short}" unless sticky.all_day? %></td>
+    </tr>
+  <% end %>
+</table>
+
+<center><%= paginate @stickies %></center>
+<% else %>
+<div style="clear:both"></div>
+  <center><span class="muted">No stickies found</span></center>
+<% end %>
