@@ -24,6 +24,7 @@ Notes::Application.routes.draw do
       post :selection
     end
     member do
+      get :show_redesign # TODO Remove
       get :bulk
       post :reassign
       post :favorite
